--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Elan Ruusamäe <https://github.com/glensc>
 Federico Ficarelli <https://nazavode.github.io>
 Maël Lavault <https://github.com/moimael>
 Sebastian Lövdahl <https://github.com/slovdahl>
