--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 Elan Ruusamäe <https://github.com/glensc>
+Eric van der Vlist <vdv@dyomedea.com>
 Federico Ficarelli <https://nazavode.github.io>
+Jens Neuhalfen <http://www.neuhalfen.name/>
 Maël Lavault <https://github.com/moimael>
 Sebastian Lövdahl <https://github.com/slovdahl>
