--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ Federico Ficarelli <https://nazavode.github.io>
 Jens Neuhalfen <http://www.neuhalfen.name/>
 Maël Lavault <https://github.com/moimael>
 Sebastian Lövdahl <https://github.com/slovdahl>
+Shigeru Kanemoto <support@switch-science.com>
