--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 Elan Ruusamäe <https://github.com/glensc>
 Eric van der Vlist <vdv@dyomedea.com>
 Federico Ficarelli <https://nazavode.github.io>
-Jens Neuhalfen <http://www.neuhalfen.name/>
+Jens Neuhalfen <http://github.com/neuhalje>
 Maël Lavault <https://github.com/moimael>
 Sebastian Lövdahl <https://github.com/slovdahl>
 Shigeru Kanemoto <support@switch-science.com>
